# KnowledgeOS

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  req.txt  requirements.txt  setup.py  test.py  version.py
.github/workflows/: aws.yaml  ci.yaml  task_definition.json
api/: main.py  oldmain.py
config/: config.yaml
data/multi_doc_chat/: Elon.txt
data/multi_doc_chat/session_20260623_092420_a9ccab8f/: cc87204d.docx
exception/: custom_exception_archive.py
faiss_index/session_20260623_093656_9f3f21b6/: index.faiss  index.pkl
faiss_index/session_20260623_093951_f6a0372f/: index.pkl
infrastructure/: document-portal-cf.yaml
logger/: custom_logger.py
model/: models.py
notebook/: exception_experiment.ipynb  experiments.ipynb  vectorstore.ipynb
prompt/: prompt_library.py
src/document_analyzer/: data_analysis.py  data_ingestion.py
src/document_chat/: retrieval.py
src/document_compare/: data_ingestion.py  document_compare.py
src/document_ingestion/: data_ingestion.py
src/multi_document_chat/: data_ingestion.py  retrieval.py
src/singledocchat/: data_ingestion.py  retrieval.py
static/: style.css
tests/: test_unit_cases.py
utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
